syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "GrpcLearn.Measure";
package measureRpc;

service MeasureManager {
  rpc Invite (CreateMeasureWriteDto) returns (CreateMeasureReadDto);
}

message CreateMeasureWriteDto {
  string name = 2;
}

message CreateMeasureReadDto {
  string invitation = 1;
  google.protobuf.Timestamp start = 2;
  google.protobuf.Duration duration = 3;
}
